  . Fixed bug GH-17959 (Relax missing trait fatal error to error exception).
    (ilutov)
  . Fixed bug GH-18033 (NULL-ptr dereference when using register_tick_function
    in destructor). (nielsdos)
  . Fixed bug GH-18026 (Improve "expecting token" error for ampersand). (ilutov)
  . Added the (void) cast to indicate that not using a value is intentional.
    (timwolla)

- Curl:
  . Added curl_multi_get_handles(). (timwolla)
  . Added curl_share_init_persistent(). (enorris)
  . Added CURLINFO_USED_PROXY, CURLINFO_HTTPAUTH_USED, and CURLINFO_PROXYAUTH_USED
    support to curl_getinfo. (Ayesh Karunaratne)

- Date:
  . Fix undefined behaviour problems regarding integer overflow in extreme edge
    cases. (nielsdos, cmb, ilutov)

- DOM:
  . Added Dom\Element::$outerHTML. (nielsdos)
  . Added Dom\Element::insertAdjacentHTML(). (nielsdos)

- Enchant:
  . Added enchant_dict_remove_from_session(). (nielsdos)
  . Added enchant_dict_remove(). (nielsdos)

- Fileinfo:
  . Upgrade to file 5.46. (nielsdos)

- FPM:
  . Fixed GH-17645 (FPM with httpd ProxyPass does not decode script path).
    (Jakub Zelenka)

- GD:
  . Fixed bug #68629 (Transparent artifacts when using imagerotate). (pierre,
    cmb)
  . Fixed bug #64823 (ZTS GD fails to to find system TrueType font). (cmb)

- Intl:
  . Bumped ICU requirement to ICU >= 57.1. (cmb)
  . IntlDateFormatter::setTimeZone()/datefmt_set_timezone() throws an exception
    with uninitialised classes or clone failure. (David Carlier)
  . Added DECIMAL_COMPACT_SHORT/DECIMAL_COMPACT_LONG for NumberFormatter class.
    (BogdanUngureanu)

- MySQLi:
  . Fixed bugs GH-17900 and GH-8084 (calling mysqli::__construct twice).
    (nielsdos)

- MySQLnd:
  . Added mysqlnd.collect_memory_statistics to ini quick reference.
    (hauk92)

- OPcache:
  . Fixed ZTS OPcache build on Cygwin. (cmb)
  . Added opcache.file_cache_read_only. (Samuel Melrose)

- Output:
  . Fixed calculation of aligned buffer size. (cmb)

- PCRE: