@@ -40,6 +40,7 @@ PHP                                                                        NEWS
   . Fixed bug GH-18026 (Improve "expecting token" error for ampersand). (ilutov)
   . Added the (void) cast to indicate that not using a value is intentional.
     (timwolla)
+  . Added get_error_handler(), get_exception_handler() functions. (Arnaud)
 
 - Curl:
   . Added curl_multi_get_handles(). (timwolla)
